--- a/src/style.css
+++ b/src/style.css
@@ -374,7 +374,7 @@ body{
 
 #statisticbuttons a, 
 #statisticbuttons button{
-    border: 1px solid var(--colorlightred);
+    border: 2px solid var(--colorlightred);
     border-radius: 10px;
     font-size: 50px;
     padding: 10px 30px;
@@ -385,7 +385,7 @@ body{
     text-align: center;
     margin-top: 10px;
     margin-bottom: 20px;
-}
+} */
 
 
 /* parametr bar */
